// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar shell visual snapshots > degraded surface — relaunch pending (rejects bootstrap fatal flow) 1`] = `
<div
  class="avatar-root avatar-root--error avatar-root--damped"
  data-composition="error_bootstrap_fatal"
  data-testid="avatar-root"
>
  <section
    aria-label="Avatar surface unavailable"
    class="nimi-surface rounded-[var(--nimi-radius-md)] border transition-colors duration-[var(--nimi-motion-fast)] nimi-surface--overlay nimi-surface--elevation-modal shadow-[var(--nimi-elevation-modal)] nimi-material-glass-regular bg-[var(--nimi-material-glass-regular-bg)] border-[var(--nimi-material-glass-regular-border)] avatar-degraded-surface nimi-material-glass-regular backdrop-blur-[var(--nimi-backdrop-blur-regular)] avatar-degraded-surface--error"
    data-composition-state="error_bootstrap_fatal"
    data-nimi-material="glass-regular"
    data-nimi-requested-material="glass-regular"
    data-nimi-tone="overlay"
    data-nimi-transparency="default"
    data-testid="avatar-degraded-surface"
    role="alert"
  >
    <div
      class="avatar-degraded-surface__banner"
    >
      <span
        class="nimi-status-badge inline-flex items-center gap-1.5 rounded-full text-xs font-medium nimi-status-badge--danger bg-[var(--nimi-status-danger-soft-bg)] text-[var(--nimi-status-danger-soft-text)] nimi-status-badge--soft px-2.5 py-0.5 avatar-degraded-surface__badge avatar-degraded-surface__badge--error"
      >
        Surface unavailable
      </span>
    </div>
    <h1
      class="avatar-degraded-surface__title"
    >
      Avatar surface failed to start
    </h1>
    <p
      class="avatar-degraded-surface__summary"
    >
      An untyped bootstrap error stopped the shell. Reason: untyped bootstrap failure during snapshot test.
    </p>
    <p
      class="avatar-degraded-surface__recovery"
    >
      Reload the avatar shell. If the failure repeats, check Runtime daemon logs.
    </p>
    <div
      class="avatar-degraded-surface__actions"
    >
      <button
        class="nimi-action inline-flex max-w-full shrink-0 items-center justify-center gap-2 whitespace-nowrap border font-semibold tracking-[var(--nimi-type-label-letter-spacing)] rounded-[var(--nimi-radius-action)] transition-all duration-[var(--nimi-motion-fast)] cursor-pointer disabled:cursor-not-allowed disabled:opacity-[var(--nimi-opacity-disabled)] nimi-action--primary bg-[var(--nimi-action-primary-bg)] border-[var(--nimi-action-primary-bg)] text-[var(--nimi-action-primary-text)] hover:bg-[var(--nimi-action-primary-bg-hover)] hover:-translate-y-px nimi-action--size-md min-h-[var(--nimi-sizing-action-md-height)] px-4 text-[length:var(--nimi-type-label-size)] avatar-degraded-surface__reload"
        data-testid="avatar-degraded-reload"
        type="button"
      >
        <span
          class="inline-flex min-w-0 items-center justify-center gap-2 overflow-hidden text-ellipsis whitespace-nowrap"
        >
          Reload shell
        </span>
      </button>
    </div>
    <details
      class="avatar-degraded-surface__diagnostics"
    >
      <summary>
        Diagnostics
      </summary>
      <dl>
        <div>
          <dt>
            Composition state
          </dt>
          <dd>
            error_bootstrap_fatal
          </dd>
        </div>
        <div>
          <dt>
            Reason
          </dt>
          <dd>
            untyped bootstrap failure during snapshot test
          </dd>
        </div>
      </dl>
    </details>
  </section>
</div>
`;

exports[`Avatar shell visual snapshots > degraded surface — runtime unavailable 1`] = `
<div
  class="avatar-root avatar-root--degraded avatar-root--damped"
  data-composition="degraded_runtime_unavailable"
  data-testid="avatar-root"
>
  <section
    aria-label="Avatar surface unavailable"
    class="nimi-surface rounded-[var(--nimi-radius-md)] border transition-colors duration-[var(--nimi-motion-fast)] nimi-surface--overlay nimi-surface--elevation-modal shadow-[var(--nimi-elevation-modal)] nimi-material-glass-regular bg-[var(--nimi-material-glass-regular-bg)] border-[var(--nimi-material-glass-regular-border)] avatar-degraded-surface nimi-material-glass-regular backdrop-blur-[var(--nimi-backdrop-blur-regular)] avatar-degraded-surface--degraded"
    data-composition-state="degraded_runtime_unavailable"
    data-nimi-material="glass-regular"
    data-nimi-requested-material="glass-regular"
    data-nimi-tone="overlay"
    data-nimi-transparency="default"
    data-testid="avatar-degraded-surface"
    role="alert"
  >
    <div
      class="avatar-degraded-surface__banner"
    >
      <span
        class="nimi-status-badge inline-flex items-center gap-1.5 rounded-full text-xs font-medium nimi-status-badge--warning bg-[var(--nimi-status-warning-soft-bg)] text-[var(--nimi-status-warning-soft-text)] nimi-status-badge--soft px-2.5 py-0.5 avatar-degraded-surface__badge avatar-degraded-surface__badge--degraded"
      >
        Runtime unavailable
      </span>
    </div>
    <h1
      class="avatar-degraded-surface__title"
    >
      Runtime interaction path is not ready
    </h1>
    <p
      class="avatar-degraded-surface__summary"
    >
      Runtime rejected or did not deliver the avatar carrier. Reason: runtime_scoped_binding: APP_GRANT_INVALID.
    </p>
    <p
      class="avatar-degraded-surface__recovery"
    >
      Restore the local Runtime daemon, then relaunch this surface from desktop.
    </p>
    <div
      class="avatar-degraded-surface__actions"
    >
      <button
        class="nimi-action inline-flex max-w-full shrink-0 items-center justify-center gap-2 whitespace-nowrap border font-semibold tracking-[var(--nimi-type-label-letter-spacing)] rounded-[var(--nimi-radius-action)] transition-all duration-[var(--nimi-motion-fast)] cursor-pointer disabled:cursor-not-allowed disabled:opacity-[var(--nimi-opacity-disabled)] nimi-action--primary bg-[var(--nimi-action-primary-bg)] border-[var(--nimi-action-primary-bg)] text-[var(--nimi-action-primary-text)] hover:bg-[var(--nimi-action-primary-bg-hover)] hover:-translate-y-px nimi-action--size-md min-h-[var(--nimi-sizing-action-md-height)] px-4 text-[length:var(--nimi-type-label-size)] avatar-degraded-surface__reload"
        data-testid="avatar-degraded-reload"
        type="button"
      >
        <span
          class="inline-flex min-w-0 items-center justify-center gap-2 overflow-hidden text-ellipsis whitespace-nowrap"
        >
          Reload shell
        </span>
      </button>
    </div>
    <details
      class="avatar-degraded-surface__diagnostics"
    >
      <summary>
        Diagnostics
      </summary>
      <dl>
        <div>
          <dt>
            Composition state
          </dt>
          <dd>
            degraded_runtime_unavailable
          </dd>
        </div>
        <div>
          <dt>
            Reason
          </dt>
          <dd>
            runtime_scoped_binding: APP_GRANT_INVALID
          </dd>
        </div>
      </dl>
    </details>
  </section>
</div>
`;

exports[`Avatar shell visual snapshots > ready surface (embodiment-stage + companion-surface) 1`] = `
<div
  class="avatar-root avatar-root--live avatar-root--ready"
  data-composition="ready"
  data-testid="avatar-root"
>
  <section
    class="avatar-embodiment-stage"
    data-testid="avatar-embodiment-stage"
  >
    <div
      class="avatar-embodiment-stage__body"
      data-testid="avatar-body-hit-region"
    />
  </section>
  <section
    aria-label="Avatar companion"
    class="nimi-surface rounded-[var(--nimi-radius-md)] border transition-colors duration-[var(--nimi-motion-fast)] nimi-surface--overlay nimi-surface--elevation-floating shadow-[var(--nimi-elevation-floating)] nimi-material-glass-regular bg-[var(--nimi-material-glass-regular-bg)] border-[var(--nimi-material-glass-regular-border)] avatar-companion-surface nimi-material-glass-regular backdrop-blur-[var(--nimi-backdrop-blur-regular)] avatar-companion-surface--idle"
    data-nimi-material="glass-regular"
    data-nimi-requested-material="glass-regular"
    data-nimi-tone="overlay"
    data-nimi-transparency="default"
    data-testid="avatar-companion-surface"
  >
    <div
      aria-label="Companion status"
      class="avatar-companion-surface__status-row"
      role="toolbar"
    >
      <button
        aria-label="Start foreground voice listening"
        aria-pressed="false"
        class="avatar-companion-surface__mic avatar-companion-surface__mic--idle"
        data-testid="avatar-companion-mic"
        type="button"
      >
        <span
          aria-hidden="true"
          class="avatar-companion-surface__mic-icon"
        >
          🎙
        </span>
      </button>
      <span
        class="avatar-companion-surface__status-label"
        data-testid="avatar-companion-status"
      >
        Idle
      </span>
      <span
        aria-hidden="true"
        class="avatar-companion-surface__speaker"
      >
        🔈
      </span>
      <button
        aria-controls="avatar-companion-settings-popover"
        aria-expanded="false"
        aria-label="Open companion settings"
        class="nimi-action inline-flex max-w-full shrink-0 items-center justify-center gap-2 whitespace-nowrap border font-semibold tracking-[var(--nimi-type-label-letter-spacing)] rounded-[var(--nimi-radius-action)] transition-all duration-[var(--nimi-motion-fast)] cursor-pointer disabled:cursor-not-allowed disabled:opacity-[var(--nimi-opacity-disabled)] nimi-action--ghost bg-transparent border-transparent text-[var(--nimi-text-secondary)] hover:bg-[var(--nimi-action-ghost-hover)] hover:text-[var(--nimi-text-primary)] hover:-translate-y-px nimi-action--size-sm min-h-[var(--nimi-sizing-action-sm-height)] text-[length:var(--nimi-type-body-sm-size)] nimi-action--icon aspect-square px-0 avatar-companion-surface__settings"
        type="button"
      >
        <span
          class="nimi-action__icon inline-flex shrink-0 items-center justify-center"
        >
          ⚙
        </span>
      </button>
    </div>
    <form
      class="avatar-companion-surface__composer"
      data-testid="avatar-companion-composer"
    >
      <label
        class="flex rounded-[var(--nimi-radius-field)] border border-[var(--nimi-field-border)] bg-[var(--nimi-field-bg)] text-[var(--nimi-field-text)] transition-colors duration-[var(--nimi-motion-fast)] focus-within:border-[var(--nimi-field-focus)] focus-within:ring-[length:var(--nimi-focus-ring-width)] focus-within:ring-[var(--nimi-focus-ring-color)] avatar-companion-surface__composer-field"
      >
        <textarea
          aria-label="Type a message to send to this anchor"
          class="min-h-[var(--nimi-sizing-textarea-min-height)] w-full resize-y bg-transparent px-3 py-2 outline-none placeholder:text-[var(--nimi-field-placeholder)] avatar-companion-surface__composer-input"
          maxlength="400"
          placeholder="Type a message…"
          rows="1"
        />
      </label>
      <button
        aria-label="Send message"
        class="nimi-action inline-flex max-w-full shrink-0 items-center justify-center gap-2 whitespace-nowrap border font-semibold tracking-[var(--nimi-type-label-letter-spacing)] rounded-[var(--nimi-radius-action)] transition-all duration-[var(--nimi-motion-fast)] cursor-pointer disabled:cursor-not-allowed disabled:opacity-[var(--nimi-opacity-disabled)] nimi-action--primary bg-[var(--nimi-action-primary-bg)] border-[var(--nimi-action-primary-bg)] text-[var(--nimi-action-primary-text)] hover:bg-[var(--nimi-action-primary-bg-hover)] hover:-translate-y-px nimi-action--size-sm min-h-[var(--nimi-sizing-action-sm-height)] px-3 text-[length:var(--nimi-type-body-sm-size)] avatar-companion-surface__composer-send"
        disabled=""
        type="submit"
      >
        <span
          class="inline-flex min-w-0 items-center justify-center gap-2 overflow-hidden text-ellipsis whitespace-nowrap"
        >
          ➤
        </span>
      </button>
    </form>
  </section>
</div>
`;
